<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">sta</string>
    <string name="adicionar">Adicionar</string>
    <string name="nome">Nome</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="ficha_tecnica">Ficha Técnica</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="checking_updates">Verificando atualizações, aguarde&#8230;</string>
    <string name="atualizacao_terminada">O sistema foi atualizado</string>
    <string name="autenticando">Autenticando&#8230;</string>
    <string name="username">usuário</string>
    <string name="password">senha</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="autenticar">Autenticar</string>
    <string name="cancelar">Cancelar</string>
    <string name="autenticacao">Autenticação</string>    
    <string name="existem_atualizacoes_mensagem">Existem atualizações nos dados. Clique em Atualizações para sincronizar as informações.</string>
    <string name="atualizar_tudo">Atualizar tudo</string>
    <string name="fechar">Fechar</string>
    <string name="mascaras">Máscaras</string>
    <string name="apresentacoes">Apresentações</string>
    <string name="artigos">Artigos</string>
    <string name="atualizacoes">Atualizações</string>
    <string name="mascaras_para_atualizar">Há %s máscaras para serem atualizadas.</string>
    <string name="arquivos_baixados">Arquivos baixados: %s</string>
    <string name="mascara_para_atualizar">Há uma máscara para ser atualizada.</string>
    <string name="nenhuma_mascara_para_atualizar">Não há máscara para ser atualizada.</string>
    <string name="apresentacoes_para_atualizar">Há %s apresentações para serem atualizadas.</string>
    <string name="apresentacao_para_atualizar">Há uma apresentação para ser atualizada.</string>
    <string name="nenhuma_apresentacao_para_atualizar">Não há apresentação para ser atualizada.</string>
    <string name="nao_ha_atualizacoes">Não há atualização disponível</string>
    <string name="faltam_artigos">Faltam: %s artigos</string>
    <string name="falta_artigo">Falta: 1 artigo</string>
    <string name="nenhum_artigo">Não há artigo para atualizar</string>
    <string name="colecoes_vigentes">As coleções vigentes</string>
    <string name="cartela_cores">Cartela de cores</string>
    <string name="closers">Closers</string>
    <string name="colecoes_fora_linha">Coleções fora de linha</string>
    <string name="sugestao_modelagem">Sugestão de modelagem</string>
    <string name="tamanho_real">Tamanho real</string>
    <string name="mascara">Máscara</string>
    <string name="distribuicao">Distribuição</string>
    <string name="pedido">Pedido</string>
    <string name="opcoes">Opções</string>
    <string name="enviar">Enviar</string>
    <string name="comparar">Comparar</string>
    <string name="favoritos">Favoritos</string>
    <string name="adicionar_favorito">Adicionar favorito</string>
    <string name="incluir_fichas_tecnicas">Incluir fichas técnicas?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="enviar_email">Enviar e-mail&#8230;</string>
    <string name="assunto_email">Coleção de Estampas Santaconstancia</string>
    <string name="sem_aplicativo_email">Não há aplicativo de envio de e-mail instalado</string>
    <string name="canais_comunicacao">Canais de Comunicação</string>
    <string name="primavera_verao">Primavera Verão 2013 2014</string>
    <string name="transicao">Transição 2013</string>
    <string name="alto_verao">Alto Verão 2013</string>
    <string name="erro_inesperado">Erro inesperado</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="falha_autenticacao">Usuário ou senha inválida</string>
    <string name="ocorreu_erro">Ocorreu um erro. Tente novamente mais tarde.</string>
    <string name="falha_comunicacao">Falha de comunicação. Tente novamente mais tarde.</string>
    <string name="falta_favorito">Você deve criar um favorito antes</string>
    <string name="falha">Ocorreu uma falha. Tente novamente mais tarde.</string>
    <string name="arquivo_compartilhado">Arquivo disponibilizado na bandeja de compartilhamento.</string>
    <string name="As_Colecoes_Vigentes">As coleções vigentes</string>
    <string name="Cartela_de_Cores">Cartela de cores</string>
    <string name="Closers">Closers</string>
    <string name="Colecoes_Fora_de_Linha">Coleções fora de linha</string>
    <string name="baixando_arquivo">Baixando o arquivo&#8230;</string>
    <string name="baixando_arquivos">Baixando arquivos&#8230;</string>
    <string name="nao_ha_aplicativo">Não há aplicativo para abrir este arquivo</string>
    <string name="nao_ha_conexao">É necessário atualizar os artigos, mas não há conexão disponível</string>
    <string name="sem_dados_compartilhados">Nenhum item foi adicionado à Bandeja de Compartilhamento</string>
    <string name="nenhuma_estampa_adicionada">Nenhuma Estampa foi adicionada ao Favorito!</string>
    <string name="desc"></string>
    <string name="quantidade">Quantidade</string>
    <string name="texto_quantidade">Entre com a quantidade desta estampa</string>
    <string name="opacidade">Opacidade</string>
    
    <!-- config -->
    <string name="website">http://www.santaconstancia.com.br/mobile</string>
	<string name="authtoken_type">br.com.santaconstacia.sta</string>
    <string name="account_type">br.com.santaconstacia.sta</string>
    <string name="content_authority">br.com.santaconstacia.sta</string>
    <string name="authTokenLabel">authTokenLabel</string>
        
</resources>
