<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	        <Button 
	            android:id="@+id/atualizarTudoButton" 
	            android:text="@string/atualizar_tudo" 
	            android:layout_width="0dip" 
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            />
	        
	        <Button 
	            android:id="@+id/fecharButton" 
	            android:text="@string/fechar" 
	            android:layout_width="0dip" 
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            />
	</LinearLayout>

    <ProgressBar 
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:id="@+id/progress_bar"
        android:indeterminate="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"/>
	
    <TextView
        android:text="@string/mascaras"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/component_margin"
        android:layout_marginTop="@dimen/component_margin"/>
    
    <TextView 
        android:textAlignment="gravity"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:background="@drawable/background_small"
        android:layout_marginLeft="@dimen/component_margin"
        android:layout_marginRight="@dimen/component_margin"
        android:paddingLeft="@dimen/component_margin"/>
    	
</LinearLayout>
