<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >
     
    <EditText
        android:id="@+id/login_dialog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ProgressBar 
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:id="@+id/progress_bar"
        android:indeterminate="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:max="100"
        />
    
    <LinearLayout 
        android:id="@+id/dialog_autenticacao_layout_mensagem"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        >
        <ImageView
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:src="@drawable/icon_error"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/dialog_autenticacao_mensagem"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp" 
            android:text="Ononononono"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        >
	        <Button 
	            android:id="@+id/login_dialog_button_autenticar" 
	            android:text="@string/autenticar" 
	            android:layout_width="0dp" 
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            />
	        
	        <Button 
	            android:id="@+id/login_dialog_button_cancelar" 
	            android:text="@string/cancelar" 
	            android:layout_width="0dp" 
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            />
	        
    </LinearLayout>

</LinearLayout>
